Rename all commands and prefixes